# _utca

./: Acer ginnala[1].2025-07-08.utca.ron  C-108{-N}[1].2025-04-23.utca.ron  C-70{Control;SN-1,2(2,3)}.2023-10-24.utca.ron  C-70{H_2O_2;SN-1,2(2,3)}.2023-10-24.utca.ron  C-70{NaCl;SN-1,2(2,3)}.2023-10-24.utca.ron  C1210-N.2025-04-24.0.0.1.utca.parquet  Cargo.toml  Catalpa ovata.2025-11-26.utca.ron  Cedrus.2023-05-19.utca.parquet  Lobosphera-N.2025-04-24.0.0.1.utca.parquet  Lunaria Rediviva.2024-01-24.0.1.1.utca.parquet  Lunaria rediviva, petalum[1].2024-05-16.utca.ron  Lunaria rediviva, petalum[2].2024-05-16.utca.ron  Lunaria rediviva, petalum[3].2024-05-16.utca.ron  Lunaria rediviva, petalum[4].2024-05-16.utca.ron  Lunaria rediviva, petalum[5].2024-05-16.utca.ron  Palm.2009-04-04.utca.ron  Polyscias{SN-1,2(2,3)}[1].2024-11-12.utca.ron  README.adoc  README.md  REVERSE.adoc  TEMP.md  TODO.md  Test.2025-11-29.utca.ron  [C-108(-N).2025-04-23.0.0.1, C-108(-N).2025-04-23.0.0.2, ...].utca.parquet  [C-1210(-N).2025-04-24.0.0.1, C-1210(-N).2025-04-24.0.0.2, ...].utca.parquet  [C-1540(-N).2025-04-24.0.0.1, C-1540(-N).2025-04-24.0.0.2, ...].utca.parquet  [C108-N.2025-04-23.0.0.1, C108-N.2025-04-23.0.0.2, ...].utca.parquet  [Euonymus Bungeanus.2014-06-19, Euonymus Europaeus.2014-06-19, ...].fa.utca.parquet  [P-519(-N).2025-04-23.0.0.1, P-519(-N).2025-04-23.0.0.2].utca.parquet  _Catalpa ovata.2025-11-26.utca.ron  index.html  polars.adoc  polars.md  utca.js  К-2233.25.10.29.fa.utca.ron  К-2233[1].2025-10-29.utca.ron  К-2233[2].2025-10-29.utca.ron  К-2233[3].2025-10-29.utca.ron  К-2699.2025-10-30.tag.utca.ron  (+19 more)
.github/workflows/: cargo_machete.yml  pages.yml  rust.yml  typos.yml
_todo/: 0.md  1.md  2.md
_trash/: biodiesel copy.rs
_trash/_presets/Acer/: Acer Ginnala.2025-07-08.0.0.1.utca.ron  Acer Ginnala.2025-07-08.0.0.2.utca.ron  Acer Ginnala.2025-07-08.0.0.3.utca.ron  Acer Pensylvanicum.2025-07-08.0.0.1.utca.ron  Acer Pensylvanicum.2025-07-08.0.0.2.utca.ron  Acer Pensylvanicum.2025-07-08.0.0.3.utca.ron  Acer Rubrum.2025-07-09.0.0.2.utca.ron  Acer Rubrum.2025-07-09.0.0.3.utca.ron  Acer Spicatum.2025-07-09.0.0.1.utca.ron  Acer Spicatum.2025-07-09.0.0.2.utca.ron  Acer Spicatum.2025-07-09.0.0.3.utca.ron  Acer Ukurunduense.2025-07-08.0.0.1.utca.ron
_trash/_presets/Cedrus/: Cedrus.2023-05-19.0.0.1.utca.ron  Cedrus.2023-05-19.utca.ron
_trash/_presets/Microalgae/: C-108(-N).2025-04-23.0.0.1.utca.ron  C-108(-N).2025-04-23.0.0.2.utca.ron  C-1540(-N).2025-04-24.0.0.2.utca.ron  H-242(Control).2023-10-24.0.0.2.utca.ron  P-519(-N).2025-04-23.0.0.1.utca.ron  P-519(-N).2025-04-23.0.0.2.utca.ron
_trash/_presets/Sidorov2014/: Euonymus Maximowiczianus.2014-06-19.utca.ron  Euonymus Semiexsertus.2014-06-19.utca.ron
_trash/_presets/Sidorov2025/: Lunaria Rediviva.2024-01-24.1.1.2.utca.ron  Lunaria Rediviva.2024-01-24.1.2.1.utca.ron  Lunaria Rediviva.2024-01-24.1.3.1.utca.ron  Lunaria Rediviva.2024-01-24.1.3.2.utca.ron  Lunaria Rediviva.2024-01-24.2.2.2.utca.ron  Lunaria Rediviva.2024-01-24.3.1.2.utca.ron  Lunaria Rediviva.2024-01-24.3.2.1.utca.ron  Lunaria Rediviva.2024-01-24.3.2.2.utca.ron
_trash/_src/: _indices.rs  biodiesel_properties copy 2.rs  biodiesel_properties copy.rs  biodiesel_properties_format_inline.rs  biodiesel_properties_format_separate.rs  indices copy 2.rs  indices copy 3.rs  indices copy.rs  table copy.rs  temp.rs
_trash/_src/display/: factor.rs  mod.rs  value.rs
_trash/calculation/: _table.rs  correlations.rs  mod.rs  table copy.rs  table new unk.rs  table.rs
_trash/calculation/sum/: biodiesel.rs  mod.rs
doc/: Progremm.md  Weighted.ru.md  ru-RU.adoc
doc/AspergillusNiger/: README.md
doc/Factors/: SelectivityFactor.md
doc/Indices/: EicosapentaenoicAndDocosahexaenoic.md  FishLipidQuality.md  HealthPromotingIndex.md  Polyunsaturated-6ToPolyunsaturated-3.md  PolyunsaturatedToSaturated.md  Trans.md  UnsaturationIndex.md
doc/correlations/: README.md
doc/en/: 1.md  CetaneNumber.md
doc/en/Factors/: EnrichmentFactor.md  SelectivityFactor.md
doc/source/: TEMP.md
doc/typst/: Omega-6.typ
ftl/: TEMP.md  TEMP.ru.md
ftl/en/: _compositions.ftl  _indices.ftl  compositions.ftl  headers.ftl  indices.ftl  main.ext.ftl  main.ftl  menu.ftl  names.ftl  properties.ftl  settings.ftl  temp.md
ftl/en/fatty_acids/: aocs.org.ftl  (+3 more)
in/: README.adoc
in/12345/: README.md
in/2025-04-23-C108/: C108-N.1.adoc  C108-N.2.adoc  C108-N.3.adoc  _C108-N_MAG.1.adoc  _C108-N_MAG.2.adoc  _C108-N_MAG.3.adoc  _C108-N_TAG.1.adoc  _C108-N_TAG.2.adoc  _C108-N_TAG.3.adoc
in/2025-04-23-C519/: 519.1.adoc  519.2.adoc  _519.2-N_TAG.1.adoc  _519.2-N_TAG.2.adoc  _519_MAG2.1.adoc  _519_MAG2.2.adoc
in/2025-04-24-C1210/: C1210-N.1.adoc  C1210-N.2.adoc  C1210-N.3.adoc  _C1210-N_MAG.1.adoc  _C1210-N_MAG.2.adoc  _C1210-N_MAG.3.adoc  _C1210-N_TAG.1.adoc  _C1210-N_TAG.2.adoc  _C1210-N_TAG.3.adoc
in/2025-04-24-H626/: H626-N.adoc  _H626-N_MAG.adoc  _H626-N_TAG.adoc
in/2025-04-24-Lobosphera/: Lobosphera.1.adoc  Lobosphera.2.adoc  Lobosphera.3.adoc  _Lobosphera_MAG.1.adoc  _Lobosphera_MAG.2.adoc  _Lobosphera_MAG.3.adoc  _Lobosphera_TAG.1.adoc  _Lobosphera_TAG.2.adoc  _Lobosphera_TAG.3.adoc
in/Acer.2025-07-09/: Acer Indices.html  Indices.md
in/Lunaria/: FwDwPercent.adoc  FwDwPercent.py  README.1.adoc  README.html  TEMP.adoc
in/Microalgae/: Indices.md  Microalgae Indices.html
src/: const.rs  lib.rs  localization.rs  main.rs  text.rs
src/_trash/: biodiesel_properties copy.rs  table copy.rs
src/app/: data copy 2.rs  data copy.rs  data.rs  data2.rs  identifiers.rs  mod.rs  text.rs
src/assets/: mod.rs
src/export/: ipc.rs  mod.rs  parquet.rs  ron.rs  xlsx.rs
src/presets/: Christie.ron  mod.rs
src/special/: _composition.rs  composition.rs  operation copy.rs
src/utils/: _metadata.rs  chaddock.rs  hash.rs  hashed.rs  metadata.rs  mod.rs  polars.rs  save.rs  trie copy.rs  trie.rs  ui.rs
toml/: 0.SATURATED.md  1.UNSATURATED.md  2.OTHER.md  README.md  TEMP.0.md  TEMP.Id.md  TEMP.name.md  TEMP.result.md  TRASH.md  fatty_acid copy.txt  fatty_acid.csv  fatty_acid.xlsx - Sheet 1.tsv  fatty_acids copy.toml
(+339 files in other folders)
