[package]
name = "utca"
version = "0.51.0"
authors = ["Giorgi Vladimirovich Kazakov", "Roman Alexandrovich Sidorov"]
edition = "2024"

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.99"
base64 = "0.22.1"
chrono = "0.4.42"
constcat = "0.6.1"
eframe = { version = "0.32.3", features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
] }
egui = "0.32.3"
egui-phosphor = "0.10.0"
egui_dnd = "0.13.0"
egui_extras = { version = "0.32.3", features = ["datepicker", "serde", "svg"] }
egui_plot = "0.33.0"
egui_table = "0.4.0"
egui_tiles = "0.13.0"
ehttp = { version = "0.5.0", features = ["json", "native-async"] }
indexmap = "2.11.3"
itertools = "0.14.0"
log = "0.4.28"
polars = { version = "0.51.0", default-features = false, features = [
    "array_arithmetic",
    "bitwise",
    "concat_str",
    "cross_join",
    "cum_agg",
    "diagonal_concat",
    "dtype-array",
    "dtype-decimal",
    "dtype-i8",
    "dtype-struct",
    "dtype-u8",
    "fmt_no_tty",
    "ipc",
    "json",
    "lazy",
    "list_any_all",
    "list_eval",
    "meta",
    "regex",
    "round_series",
    "row_hash",
    "serde",
    "serde-lazy",
    "sign",
    "strings",
    # "diagonal_concat",
    # "list_drop_nulls",
    # "semi_anti_join",
] }
polars-utils = { version = "0.51.0", features = ["nightly"] }
radix_trie = "0.3.0"
ron = "0.11.0"
rust_xlsxwriter = { version = "0.90.0", features = ["chrono", "wasm"] }
serde = { version = "1.0.225", features = ["derive", "std"] }
thiserror = "2.0.16"
toml = "0.9.6"
tracing = "0.1.41"
unic-langid = { version = "0.9.6", features = ["macros"] }
uom = "0.37.0"
url = { version = "2.5.7", features = ["serde"] }

# egui-any = "0.1.0"
# egui-probe = { version = "0.8.0", features = ["derive"] }
# bincode = "2.0.1"
# fluent = "0.16.1"
# fluent_content = "0.0.5"
# indexmap = { version = "2.9.0", features = ["serde"] }
# intl-memoizer = "0.5.2"
# maplit = "1.0.2"
# num = "0.4.3"
# re_ui = "0.22.0"
# semver = { version = "1.0.26", features = ["serde"] }

egui_ext = { git = "https://github.com/kgv/egui_ext", features = [
    "markdown",
    "tracing",
] }
egui_l20n = { git = "https://github.com/kgv/egui_l20n", features = ["macros"] }
egui_tiles_ext = { git = "https://github.com/kgv/egui_tiles_ext" }
lipid = { git = "https://github.com/ippras/lipid" }
# metadata = { git = "https://github.com/ippras/metadata", rev = "dd0199444cb4c42cadceeb4da13abce83186d96a" }
metadata = { git = "https://github.com/ippras/metadata", branch = "map" }
molecule = { git = "https://github.com/ippras/molecule" }
polars_ext = { git = "https://github.com/kgv/polars_ext", features = [
    "temporal_conversions",
] }

# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
poll-promise = { version = "0.3.0", features = ["tokio"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.3.3", default-features = false, features = [
    "wasm_js",
] }
poll-promise = { version = "0.3.0", features = ["web"] }
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.51"
web-sys = "0.3.78"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
