[package]
name = "utca"
version = "0.52.0"
authors = ["Giorgi Vladimirovich Kazakov", "Roman Alexandrovich Sidorov"]
edition = "2024"

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = "0.4.42"
constcat = "0.6.1"
eframe = { version = "0.33.0", features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
] }
egui = "0.33.0"
egui-phosphor = { git = "https://github.com/bircni/egui-phosphor", branch = "feature/egui-0.33" }
egui_dnd = "0.14.0"
egui_extras = { version = "0.33.0", features = ["datepicker", "serde", "svg"] }
egui_plot = "0.34.0"
egui_table = "0.5.0"
egui_tiles = "0.14.0"
ehttp = { version = "0.5.0", features = ["json", "native-async"] }
indexmap = "2.12.0"
itertools = "0.14.0"
log = "0.4.28"
polars = { version = "0.52.0", default-features = false, features = [
    "array_arithmetic",
    "bitwise",
    "concat_str",
    "cross_join",
    "cum_agg",
    "diagonal_concat",
    "dtype-array",
    "dtype-decimal",
    "dtype-i8",
    "dtype-struct",
    "dtype-u8",
    "fmt_no_tty",
    "ipc",
    "json",
    "lazy",
    "list_any_all",
    "list_eval",
    "meta",
    "regex",
    "round_series",
    "row_hash",
    "serde",
    "serde-lazy",
    "sign",
    "strings",
    #
    "dtype-datetime",
    "parquet",
    "timezones",
    # "diagonal_concat",
    # "list_drop_nulls",
    # "semi_anti_join",
] }
polars-utils = { version = "0.52.0", features = ["nightly"] }
radix_trie = "0.3.0"
ron = "0.11.0"
rust_xlsxwriter = { version = "0.91.0", features = ["chrono", "wasm"] }
serde = { version = "1.0.228", features = ["derive", "std"] }
thiserror = "2.0.17"
toml = "0.9.8"
tracing = "0.1.41"
unic-langid = { version = "0.9.6", features = ["macros"] }
uom = "0.37.0"
url = { version = "2.5.7", features = ["serde"] }

# egui-any = "0.1.0"
# egui-probe = { version = "0.8.0", features = ["derive"] }
# bincode = "2.0.1"
# fluent = "0.16.1"
# fluent_content = "0.0.5"
# indexmap = { version = "2.9.0", features = ["serde"] }
# intl-memoizer = "0.5.2"
# maplit = "1.0.2"
# num = "0.4.3"
# re_ui = "0.22.0"
# semver = { version = "1.0.26", features = ["serde"] }

heck = "0.5.0"
polars-parquet-format = "0.1.0"

atom = { git = "https://github.com/ippras/atom" }
egui_ext = { git = "https://github.com/kgv/egui_ext", branch = "egui-0.33.0" }
egui_l20n = { git = "https://github.com/kgv/egui_l20n", branch = "egui-0.33.0", features = [
    "macros",
] }
egui_tiles_ext = { git = "https://github.com/kgv/egui_tiles_ext", branch = "egui-0.33.0" }
lipid = { git = "https://github.com/ippras/lipid" }
metadata = { git = "https://github.com/ippras/metadata", features = [
    "egui",
    "polars",
] }
polars_ext = { git = "https://github.com/kgv/polars_ext", features = [
    "temporal_conversions",
] }
# molecule = { git = "https://github.com/ippras/molecule" }

# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
poll-promise = { version = "0.3.0", features = ["tokio"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.3.4", default-features = false, features = [
    "wasm_js",
] }
poll-promise = { version = "0.3.0", features = ["web"] }
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.55"
web-sys = "0.3.82"

[features]
default = ["markdown"]
markdown = ["egui_ext/markdown"]

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
