[package]
name = "utca"
version = "0.55.0"
authors = ["Giorgi Vladimirovich Kazakov", "Roman Alexandrovich Sidorov"]
edition = "2024"

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = "0.4.42"
const_format = "0.2.35"
eframe = { version = "0.33.3", features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
] }
egui = "0.33.3"
egui-phosphor = "0.11.0"
egui_dnd = "0.14.0"
egui_extras = { version = "0.33.3", features = ["datepicker", "serde", "svg"] }
egui_plot = "0.34.0"
egui_table = "0.6.0"
egui_tiles = "0.14.1"
ehttp = { version = "0.6.0", features = ["json", "native-async"] }
indexmap = "2.12.1"
itertools = "0.14.0"
log = "0.4.29"
ordered-float = { version = "5.1.0", features = ["serde"] }
# polars = { version = "0.52.0", default-features = false, features = [
# fea5335e5befc493af208a34c6b4162a1cbd2798 2025-11-12
# 05f6f2db49c6721f8208b3bbcca5ec54568e34c4 2025-12-17
polars = { git = "https://github.com/pola-rs/polars", rev = "05f6f2d", default-features = false, features = [
    "array_any_all",
    "array_arithmetic",
    "bitwise",
    "concat_str",
    "cov",
    "cross_join",
    "cum_agg",
    "diagonal_concat",
    "dtype-array",
    "dtype-decimal",
    "dtype-i8",
    "dtype-struct",
    "dtype-u8",
    "fmt_no_tty",
    "lazy",
    "list_any_all",
    "list_eval",
    "meta",
    "pivot",
    "propagate_nans",
    "rank",
    "regex",
    "round_series",
    "row_hash",
    "serde",
    "serde-lazy",
    "sign",
    "strings",
    #
    "dtype-datetime",
    "timezones",
    #
    # "ipc",
    # "new_streaming",
    # "json",
    # "parquet",
    # "diagonal_concat",
    # "list_drop_nulls",
    # "semi_anti_join",
] }
polars-utils = { version = "0.52.0", features = ["nightly"] }
ron = "0.12.0"
rust_xlsxwriter = { version = "0.92.2", features = ["chrono", "wasm"] }
serde = { version = "1.0.228", features = ["derive", "std"] }
thiserror = "2.0.17"
toml = "0.9.8"
tracing = "0.1.44"
unic-langid = { version = "0.9.6", features = ["macros"] }
uom = "0.37.0"
url = { version = "2.5.7", features = ["serde"] }
urlencoding = "2.1.3"
# maplit = "1.0.2"
# egui-any = "0.1.0"
# egui-probe = { version = "0.8.0", features = ["derive"] }
# bincode = "2.0.1"
# fluent = "0.16.1"
# indexmap = { version = "2.9.0", features = ["serde"] }
# intl-memoizer = "0.5.2"
# maplit = "1.0.2"
# num = "0.4.3"
# re_ui = "0.22.0"
# semver = { version = "1.0.26", features = ["serde"] }
# heck = "0.5.0"
# polars-parquet-format = "0.1.0"
# radix_trie = "0.3.0"
radix_immutable = "0.0.1"

atom = { git = "https://github.com/ippras/atom" }
egui_ext = { git = "https://github.com/kgv/egui_ext" }
egui_l20n = { git = "https://github.com/kgv/egui_l20n", features = ["macros"] }
egui_tiles_ext = { git = "https://github.com/kgv/egui_tiles_ext" }
lipid = { git = "https://github.com/ippras/lipid", branch = "05f6f2d" }
metadata = { git = "https://github.com/ippras/metadata", branch = "05f6f2d", features = [
    "egui",
    "polars",
] }
polars_ext = { git = "https://github.com/kgv/polars_ext", branch = "05f6f2d", features = [
    "array",
    "temporal_conversions",
] }

# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
poll-promise = { version = "0.3.0", features = ["tokio"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.3.4", default-features = false, features = [
    "wasm_js",
] }
poll-promise = { version = "0.3.0", features = ["web"] }
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.56"
web-sys = "0.3.83"

[features]
default = []
markdown = ["egui_ext/markdown"]

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
